[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "best"
version = "0.1.0"
description = "Batched Emulator Sampling with Tensorflow"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.23,<2.0",
    "tensorflow>=2.16,<2.21",
    "tensorflow-probability>=0.23",
    "tf-keras>=2.16,<2.21",
    "hypersphere-sampler"
]

authors = [
    {name = "Andreas Nygaard", email = "Andreas@phys.au.dk"}
]

license = "MIT"

[tool.setuptools.packages.find]
include = ["best*"]
